Fleshing out welcome - including adding some new icons
git-svn-id: http://subversion.assembla.com/svn/Debrief@2197 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/intro_content/css/intro.css
+++ b/trunk/org.mwc.debrief.core/intro_content/css/intro.css
@@ -20,6 +20,9 @@ a#debrief-welcome:hover img { background-image : url(graphics/welcomehov.gif); }
 a#debrief-viewlog img { background-image : url(graphics/viewlog.gif); }
 a#debrief-viewlog:hover img { background-image : url(graphics/viewloghov.gif); }
 
+a#debrief-viewS2R img { background-image : url(graphics/submarine.png); }
+a#debrief-viewS2R:hover img { background-image : url(graphics/submarinehov.png); }
+
 
 a#debrief-changelog img { background-image : url(graphics/changelog.gif); }
 a#debrief-changelog:hover img { background-image : url(graphics/changeloghov.gif); }
