--- a/trunk/org.mwc.asset.core/templates/xml-templates.xml
+++ b/trunk/org.mwc.asset.core/templates/xml-templates.xml
@@ -2,7 +2,7 @@
 <templates>
 	<template 
 		name="ASSET Scenario" 
-		description="Template for a blank ASSET Sceanrio"
+		description="Template for a blank ASSET Scenario"
 		id="www.mwc.org/asset/model-file" 
 		context="xml_new"
 		enabled="true">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
@@ -10,4 +10,14 @@
   &lt;StepTime Units="millis" Value="0.0"/&gt;
   &lt;Participants/&gt;
 &lt;/Scenario&gt;</template>
+	<template 
+		name="ASSET Control File" 
+		description="Template for a blank ASSET scenario controller file"
+		id="www.mwc.org/asset/control-file" 
+		context="xml_new"
+		enabled="true">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
+&lt;ScenarioController OutputDirectory="token"  xmlns="http://www.mwc.org/asset" &gt;
+&lt;/ScenarioController&gt;
+</template>
+
 </templates>
