adopt easy-name Mk12, to simplify the job in hand

--- a/trunk/org.mwc.debrief.track_shift/src/org/mwc/debrief/track_shift/views/midflow2.xml
+++ b/trunk/org.mwc.debrief.track_shift/src/org/mwc/debrief/track_shift/views/midflow2.xml
@@ -5096,7 +5096,7 @@
 </fix>
 </TrackSegment>
 </track>
-<track InterpolatePoints="false" LineThickness="2" LinkPositions="true" Name="TMA_220415.22" NameAtStart="true" NameLocation="Right" NameVisible="true" PlotArrayCentre="false" PositionsVisible="true" SensorsVisible="true" SolutionsVisible="true" Symbol="Submarine" Visible="true">
+<track InterpolatePoints="false" LineThickness="2" LinkPositions="true" Name="TMA_TGT" NameAtStart="true" NameLocation="Right" NameVisible="true" PlotArrayCentre="false" PositionsVisible="true" SensorsVisible="true" SolutionsVisible="true" Symbol="Submarine" Visible="true">
 <colour Value="RED"/>
 <font Bold="false" Family="Sans Serif" Italic="true" Size="9"/>
 <RelativeTMASegment BaseFrequency="0.000" CourseDegs="224.495" HostTrack="NONSUCH" LineStyle="Solid" Name="220415.22" Visible="true">
